# simplemath

./: README.rst  examples_fancy.py  examples_simple.py  pyproject.toml  setup.py  simple_examples.py  simplemath.py
examples/: __init__.py  demo_fancy.py  demo_simple.py  simple_demo.py  simplemathExample.py
simplemath.egg-info/: PKG-INFO  SOURCES.txt
src/: fancymath.py  mathfancy.py  simplemath.py  smlib.py
