[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "simplemath"
version = "0.5.0"
authors = [
    {name = "khaz", email = "pykhaz@o2.pl"},
]
description = "Simple algebra with python"
readme = "README.rst"
requires-python = ">=3.7"
keywords = ["algebra", "python", "basic"]
license = {text = "MIT"}
